# 3D_bridge_meshes

./: .gitignore  .gitmodules  README.md  cvCodeTest.py  get_image.py  image_server.py  pseudoCode.cpp  pub_images.py
intel_loc_pcl/: CMakeLists.txt  package.xml
intel_loc_pcl/launch/: cloud_pub.launch  intel_tf_full.launch  loam.rviz  loam_filter.launch
intel_loc_pcl/pcd_outputs/: filtered_bridge.pcd  pcd_output.pcd
intel_loc_pcl/src/: box_filter.cpp  intel_tf_pub.cpp  pub_robust_pcl.cpp  register_multiple.cpp  transform_cloud_pub.cpp  velodyne_tf_pub.cpp
mapping/: CMakeLists.txt  package.xml
mapping/launch/: loam_filter.launch
mapping/pcd_outputs/: pcd_output.pcd
mapping/src/: 3d_to_2d.cpp  box_filter.cpp  image_acquire.cpp  loam_to_world.cpp  pub_robust_pcl.cpp  register_multiple.cpp  transform_cloud_pub.cpp  velodyne_tf_pub.cpp
octomap_mapping/octomap_server/: CMakeLists.txt  package.xml
octomap_mapping/octomap_server/include/: Explorer.h
octomap_mapping/octomap_server/include/octomap_server/: OctomapServerBridgeOnly.h  OctomapServerMetric.h  OctomapServerTrimmed.h  kevin_functions.h
octomap_mapping/octomap_server/launch/: baseline.launch  octomap_mapping.launch  octomap_tracking_server.launch
octomap_mapping/octomap_server/src/: Explorer.cpp  OctomapServerBridgeOnly.cpp  OctomapServerMetric.cpp  OctomapServerTrimmed.cpp  TrackingOctomapServer.cpp  baseline.cpp  explorer_node.cpp  generateGT.cpp  kevin.cpp  kevin_BU_noClustering.cpp  octomap_server_node_bridge_only.cpp  octomap_server_node_metrics.cpp  sandBox.cpp  visitedPoints_Publisher.cpp  zFilter.cpp
pcl_filter/: CMakeLists.txt
pcl_filter/launch/: cloud_pub.launch  eve_launch.launch
pcl_filter/src/: .3d_to_2d.cpp.swp  3d_to_2d.cpp  fuse_map.cpp  image_acquire.cpp  transform_cloud_pub.cpp  transform_cloud_velo.cpp
pcl_to_mesh/: CMakeLists.txt
pcl_to_mesh/src/: chull_fit.cpp  cmake_install.cmake  filter_spatial.cpp  greedy_projection.cpp  plane_segment.cpp  reconstruct.cpp  surf_reconstruct.cpp
simulation_files/: bridge_work.world  final_bridge.world  final_bridge_large.world
